# guthrieai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
src/: app.py  config.py
src/app/: __init__.py  seeds.py
src/app/models/: chat.py
src/app/routes/: main.py
src/app/services/: llm_service.py
src/static/css/: style.css
src/templates/: base.html  index.html
src/templates/partials/: bot_item.html  bot_loading.html  bot_message.html  chat_window.html  conversation_item.html  create_bot_modal.html  message_pair.html  user_message.html
